[gd_scene load_steps=26 format=3 uid="uid://3ujj6oc0alnj"]

[ext_resource type="PackedScene" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="FontFile" uid="uid://bk54s7whpf7ee" path="res://themes/Baloo Black/fonts/Baloo2-Medium.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://ccj8ieu78rrjx" path="res://backs/Brownz.png" id="4"]
[ext_resource type="PackedScene" path="res://Track_L.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://dh8i2eoajwhcp" path="res://loops/intro.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://b7qo6hwtqjg5e" path="res://backs/gravel.png" id="7_554vs"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1vr3y"]
texture = ExtResource("7_554vs")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nehd2"]
texture = ExtResource("7_554vs")
margins = Vector2i(64, 0)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2yrbp"]
texture = ExtResource("7_554vs")
margins = Vector2i(128, 128)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oj5dc"]
texture = ExtResource("7_554vs")
margins = Vector2i(192, 128)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gg350"]
texture = ExtResource("7_554vs")
margins = Vector2i(0, 192)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nata8"]
texture = ExtResource("7_554vs")
margins = Vector2i(64, 192)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w0eth"]
texture = ExtResource("7_554vs")
margins = Vector2i(128, 192)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5lkvx"]
texture = ExtResource("7_554vs")
margins = Vector2i(192, 192)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l7d8l"]
texture = ExtResource("7_554vs")
margins = Vector2i(128, 0)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_agk7x"]
texture = ExtResource("7_554vs")
margins = Vector2i(192, 0)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ob0bw"]
texture = ExtResource("7_554vs")
margins = Vector2i(0, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xjjmw"]
texture = ExtResource("7_554vs")
margins = Vector2i(64, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mmga6"]
texture = ExtResource("7_554vs")
margins = Vector2i(128, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3bbdf"]
texture = ExtResource("7_554vs")
margins = Vector2i(192, 64)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_otp5d"]
texture = ExtResource("7_554vs")
margins = Vector2i(0, 128)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fg7yv"]
texture = ExtResource("7_554vs")
margins = Vector2i(64, 128)
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSet" id="TileSet_gf8jt"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_1vr3y")
sources/1 = SubResource("TileSetAtlasSource_nehd2")
sources/2 = SubResource("TileSetAtlasSource_l7d8l")
sources/3 = SubResource("TileSetAtlasSource_agk7x")
sources/4 = SubResource("TileSetAtlasSource_ob0bw")
sources/5 = SubResource("TileSetAtlasSource_xjjmw")
sources/6 = SubResource("TileSetAtlasSource_mmga6")
sources/7 = SubResource("TileSetAtlasSource_3bbdf")
sources/8 = SubResource("TileSetAtlasSource_otp5d")
sources/9 = SubResource("TileSetAtlasSource_fg7yv")
sources/10 = SubResource("TileSetAtlasSource_2yrbp")
sources/11 = SubResource("TileSetAtlasSource_oj5dc")
sources/12 = SubResource("TileSetAtlasSource_gg350")
sources/13 = SubResource("TileSetAtlasSource_nata8")
sources/14 = SubResource("TileSetAtlasSource_w0eth")
sources/15 = SubResource("TileSetAtlasSource_5lkvx")

[node name="Main" type="Node2D"]
script = ExtResource("2")
Track_L = ExtResource("5")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_begin = Vector2(-100000, -100000)
scroll_limit_end = Vector2(100000, 100000)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_mirroring = Vector2(2560, 1280)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("4")
centered = false

[node name="Player" parent="." instance=ExtResource("1")]
z_index = 500

[node name="Camera3D" type="Camera2D" parent="."]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Canvas/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_fonts/font = SubResource("1")
text = "Text line 1
Text line 2"

[node name="intro" type="AudioStreamPlayer" parent="Canvas"]
stream = ExtResource("6")
autoplay = true

[node name="DrawTrack" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Statics" type="Node2D" parent="."]
position = Vector2(680, 271)

[node name="TileMap" type="TileMap" parent="Statics"]
tile_set = SubResource("TileSet_gf8jt")
rendering_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 12, 0, -131072, 13, 0, -131071, 14, 0, -131070, 15, 0, -2, 3, 0, -1, 0, 0, -65536, 1, 0, -65535, 2, 0, -65534, 3, 0, -65533, 0, 0, 65534, 7, 0, 65535, 4, 0, 0, 5, 0, 1, 6, 0, 2, 7, 0, 3, 4, 0, 131070, 11, 0, 131071, 8, 0, 65536, 9, 0, 65537, 10, 0, 65538, 11, 0, 65539, 8, 0, 196606, 15, 0, 196607, 12, 0, 131072, 13, 0, 131073, 14, 0, 131074, 15, 0, 131075, 12, 0, 262143, 0, 0, 196608, 1, 0, 196609, 2, 0, 196610, 3, 0)

[connection signal="set_draw_timer" from="Player" to="." method="_on_Player_set_draw_timer"]
[connection signal="set_hud" from="Player" to="." method="_on_Player_set_hud"]
[connection signal="timeout" from="DrawTrack" to="." method="_on_DrawTrack_timeout"]
